# capstone

./: .dockerignore  .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  provable-ai-memory-of-record-assessment.md  vector-db-ai-memory-research-compendium.md
.claude/skills/: db-debug.md
.github/workflows/: release.yml
crates/executor/: Cargo.toml
crates/executor/src/: eval.rs  lib.rs  operator.rs  row.rs
crates/executor/tests/: row_proptest.rs
crates/picklejar/: Cargo.toml
crates/picklejar-cli/: Cargo.toml
crates/picklejar-cli/src/: main.rs
crates/picklejar-difftest/: Cargo.toml
crates/picklejar-difftest/src/: lib.rs
crates/picklejar-difftest/tests/: diff.rs
crates/picklejar-server/: Cargo.toml
crates/picklejar-server/src/: engine.rs  lib.rs  main.rs  pgwire.rs
crates/picklejar/src/: authmem.rs  certify.rs  cmsketch.rs  correlated.rs  countbloom.rs  database.rs  error.rs  faults.rs  freshness_model.rs  hnsw.rs  homoagg.rs  index.rs  keyenc.rs  lib.rs  lsh.rs  persist.rs  quorum.rs  ratelimit.rs  roaring.rs  security.rs  vecsim.rs
crates/picklejar/tests/: ai_memory.rs  backup.rs  contradiction_detection.rs  pitr_restore_as_of.rs  self_healing_heap.rs  session.rs  sidecar_integrity.rs  stats_aggregates.rs  vector_index_path.rs
crates/planner/: Cargo.toml
crates/planner/src/: binder.rs  catalog.rs  cost.rs  explain.rs  lib.rs  logical.rs  physical.rs
crates/planner/tests/: end_to_end.rs  proptests.rs
crates/replication/: Cargo.toml
crates/replication/src/: lib.rs  net.rs
crates/rustdb/: Cargo.toml
crates/rustdb-cli/: Cargo.toml
crates/rustdb-cli/src/: main.rs
crates/rustdb-difftest/src/: lib.rs
crates/rustdb-server/src/: main.rs  pgwire.rs
crates/rustdb/src/: database.rs  error.rs  lib.rs  persist.rs
crates/rustdb/tests/: session.rs
crates/sql/: Cargo.toml
crates/sql/src/: ast.rs  datetime.rs  json.rs  lexer.rs  lib.rs  parser.rs  statement.rs  token.rs
crates/sql/tests/: proptests.rs
crates/storage/: Cargo.toml
crates/storage/src/: btree.rs  buffer.rs  error.rs  file.rs  header.rs  heap.rs  lib.rs  resilience.rs  resilient.rs  varbtree.rs
crates/storage/tests/: proptests.rs
crates/txn/: Cargo.toml
crates/txn/src/: error.rs  lib.rs  mvcc.rs  version.rs
crates/txn/tests/: proptests.rs
crates/wal/: Cargo.toml
crates/wal/src/: error.rs  hook.rs  lib.rs  lsn.rs  model.rs  reader.rs  record.rs  recovery.rs  sim.rs  workload.rs
crates/wal/tests/: buffer_pool_integration.rs  dst.rs  proptests.rs  recovery_integration.rs  torture.rs
docs/: FEATURES.md  ROADMAP.md  design.md  quickstart.md  sprints.md
examples/: README.md
sdk/python/: README.md  pyproject.toml
sdk/python/picklejar/: __init__.py  client.py
