[package]
name = "picklejar-executor"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Iterator-style query executor for picklejar."

[dependencies]
picklejar-planner.workspace = true
picklejar-sql.workspace = true
picklejar-storage.workspace = true
picklejar-txn.workspace = true
thiserror.workspace = true

[dev-dependencies]
proptest = "1"

[lints]
workspace = true
