[package]
name = "picklejar-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "psql-style interactive shell for picklejar."

[[bin]]
name = "picklejar"
path = "src/main.rs"

[dependencies]
picklejar.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[lints]
workspace = true
