[package]
name = "picklejar-difftest"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Differential testing of the picklejar engine against SQLite."

[[bin]]
name = "difftest"
path = "src/bin/difftest.rs"

[dependencies]
picklejar.workspace = true
rusqlite = { version = "0.31", features = ["bundled"] }
tempfile = "3"

[lints]
workspace = true
