[package]
name = "picklejar-planner"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Logical and physical planning + cost-based query optimization for picklejar."

[dependencies]
picklejar-sql.workspace = true
picklejar-storage.workspace = true
thiserror.workspace = true

[dev-dependencies]
proptest = "1"

[lints]
workspace = true
