[package]
name = "rustdb-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "psql-style interactive shell for rustdb."

[[bin]]
name = "rustdb"
path = "src/main.rs"

[dependencies]
rustdb.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[lints]
workspace = true
