[package]
name = "picklejar-txn"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Transaction manager, lock manager, and MVCC for picklejar."

[dependencies]
picklejar-storage.workspace = true
picklejar-wal.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile = "3"
proptest = "1"

[lints]
workspace = true
